--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
 					<tr>
 						<th>Nama</th>
 						<th>:</th>
-						<td></td>
+						<td>Ucok</td>
 					</tr>
 					<tr>
 						<th>Tempat, Tgl.Lahir</th>
 						<th>:</th>
-						<td></td>
+						<td>Lukhulase, 17 mei 1980</td>
 					</tr>
 					<tr>
 						<th>Agama</th>
 						<th>:</th>
-						<td></td>
+						<td>Kristen</td>
 					</tr>
 					<tr>
 						<th>Alamat</th>
